--- a/index.html
+++ b/index.html
@@ -4,19 +4,35 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CSS for begginers</title>
-        <link rel="stylesheet" type="text/css" href="css-file/syntax.css">
+        <title>CSS for beginners</title>
+
+<style>
+
+    .welcome {
+        color: red;
+        font-size: 10px;
+         }
+
+</style>
 
     </head>
     
     <body>
-        <div id="header">
+
+        <p class="welcome">Welcome</p>
+
+        <div id="header" style="position: fixed; top: 0; left: 0; width: 100;">
         <h1>Selectors</h1>
         <h2>In CSS</h2>
         <p>Welcome to the website</p>
     </div>
 
-        <p>Hello there ninjas</p> 
+        <p style="font-size: 10px;">Hello there ninjas</p> 
+        <p style="font-size: 10px;">Hello there ninjas</p>
+        <p>Hello there ninjas</p>
+        <p>Hello there ninjas</p>
+        <p>Hello there ninjas</p>
+        <p>Hello there ninjas</p>
 </body>
 
 </html>
