--- a/index.html
+++ b/index.html
@@ -6,20 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CSS for beginners</title>
 
-<style>
-
-    .welcome {
-        color: red;
-        font-size: 10px;
-         }
-
-</style>
-
     </head>
     
     <body>
 
-        <p class="welcome">Welcome</p>
+        <p class="welcome" style="font-size: 10px; color: red;">Welcome</p>
 
         <div id="header" style="position: fixed; top: 0; left: 0; width: 100;">
         <h1>Selectors</h1>
