index.html updated as per css

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CSS for beginners</title>
+        <link rel="stylesheet" type="text/css" href="css-file/syntax.css">
 
     </head>
     
     <body>
 
-        <p class="welcome" style="font-size: 10px; color: red;">Welcome</p>
+        <p class="welcome">Welcome</p>
 
-        <div id="header" style="position: fixed; top: 0; left: 0; width: 100;">
+        <div id="header">
         <h1>Selectors</h1>
         <h2>In CSS</h2>
         <p>Welcome to the website</p>
     </div>
 
-        <p style="font-size: 10px;">Hello there ninjas</p> 
-        <p style="font-size: 10px;">Hello there ninjas</p>
+        <p>Hello there ninjas</p> 
+        <p>Hello there ninjas</p>
         <p>Hello there ninjas</p>
         <p>Hello there ninjas</p>
         <p>Hello there ninjas</p>
