--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
         </div>
 
         <p>Hello there ninjas! contact us below</p>
-        <p>Hello there ninjas! contact us below</p>
-        <p>Hello there ninjas! contact us below</p>
-        <p>Hello there ninjas! contact us below</p>
-        <p>Hello there ninjas! contact us below</p>
-        <p>Hello there ninjas! contact us below</p>
+        <p>Aren't paragraph's cool?</p>
+
+        <a href="http://www.google.com">Google</a>
+        
+        <span>Yo, I am a span tag</span>
 
     </body>
 
