contact.html and syntax-css updated with conflict and cascade

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,12 @@
     <head>
         <title>CSS for beginners</title>
         <link rel="stylesheet" type="text/css" href="css-file/syntax.css">
+
+        <style>
+            span {
+                color: purple;
+            }
+        </style>
     </head>
 
     <body>
@@ -21,7 +27,7 @@
 
         <a href="http://www.google.com">Google</a>
 
-        <span>Yo, I am a span tag</span>
+        <span style="color: green;">Yo, I am a span tag</span>
 
         <span class="deck"> Yo, I am a span tag</span>
         <span class="deck">This is deck of spans</span>
