contact.html and syntax.css updated Inheritance

--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,6 @@
         <title>CSS for beginners</title>
         <link rel="stylesheet" type="text/css" href="css-file/syntax.css">
 
-        <style>
-            span {
-                color: purple;
-            }
-        </style>
     </head>
 
     <body>
@@ -22,12 +17,16 @@
 
         <h2 id="content-header">Content</h2>
         
-        <p>Hello there ninjas! contact us below</p>
-        <p>Aren't paragraph's cool?</p>
+        <div>
+            <p>Hello there ninjas! contact us below</p>
+            <p>Aren't paragraph's cool?</p>
+        </div>
 
         <a href="http://www.google.com">Google</a>
 
-        <span style="color: green;">Yo, I am a span tag</span>
+        <span>Yo, I am a span tag</span>
+
+        <a href="a">I am a spanner</a>
 
         <span class="deck"> Yo, I am a span tag</span>
         <span class="deck">This is deck of spans</span>
