--- a/contact.html
+++ b/contact.html
@@ -17,17 +17,16 @@
 
         <h2 id="content-header">Content</h2>
         
-        <div>
-            <p>Hello there ninjas! contact us below</p>
-            <p>Aren't paragraph's cool?</p>
+        <div id="main-content">
+            <p>Hello there <strong>ninjas!</strong> contact us below</p>
+            <p class="test">Aren't paragraph's cool?</p>
         </div>
 
         <a href="http://www.google.com">Google</a>
 
-        <span>Yo, I am a span tag</span>
+        <p>None contains P tag</p>
 
-        <a href="a">I am a spanner</a>
-
+        <span>yo, I am a span tag</span>
         <span class="deck"> Yo, I am a span tag</span>
         <span class="deck">This is deck of spans</span>
         <span class="deck">I like span decks</span>
