--- a/contact.html
+++ b/contact.html
@@ -20,17 +20,24 @@
         <div id="main-content">
             <p>Hello there <strong>ninjas!</strong> contact us below</p>
             <p class="test">Aren't paragraph's cool?</p>
+            
+            <div id="sub-content"></div>
+            <p>More content</p>
         </div>
 
-        <a href="http://www.google.com">Google</a>
+            <p>None contains P tag</p>
 
-        <p>None contains P tag</p>
-
-        <span>yo, I am a span tag</span>
+        <span>Yo, I am a span tag</span>
         <span class="deck"> Yo, I am a span tag</span>
         <span class="deck">This is deck of spans</span>
         <span class="deck">I like span decks</span>
         
+        <a href="a">I am a span</a>
+
+        <ul>
+            <li>list items are fune</li>
+            <li>list items are fune</li>
+        </ul>
     </body>
 
 </html>
