--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
             </div>
       
-        <span>Yo, I am a span tag</span>
+        <span>Yo, I am a span tag!</span>
         <span class="deck halls"> Yo, I am a span tag</span>
         <span class="deck">This is deck of spans</span>
         <span class="deck">I like span decks</span>
