--- a/articles2.html
+++ b/articles2.html
@@ -14,24 +14,23 @@
     <h2>Most recent articles</h2>
 
     <article>
-
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia voluptates esse mollitia molestiae laborum ex quod
+        <h2>Article title</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia voluptates esse mollitia molestiae laborum ex quod
         aspernatur quisquam, ullam debitis! Est suscipit ex, officia ab quis sit minima beatae ducimus!</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia voluptates esse mollitia molestiae laborum ex quod
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia voluptates esse mollitia molestiae laborum ex quod
         aspernatur quisquam, ullam debitis! Est suscipit ex, officia ab quis sit minima beatae ducimus!</p>
-    <p>To read more click <a href="a">here</a></p>
-
-
+        <p>To read more click <a href="a">here</a></p>
+        <hr>
     </article>
 
     <article>
-
+        <h2>Article 2 title</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia voluptates esse mollitia molestiae laborum ex quod
-            aspernatur quisquam, ullam debitis! Est suscipit ex, officia ab quis sit minima beatae ducimus!</p>
+        aspernatur quisquam, ullam debitis! Est suscipit ex, officia ab quis sit minima beatae ducimus!</p>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia voluptates esse mollitia molestiae laborum ex quod
-            aspernatur quisquam, ullam debitis! Est suscipit ex, officia ab quis sit minima beatae ducimus!</p>
+        aspernatur quisquam, ullam debitis! Est suscipit ex, officia ab quis sit minima beatae ducimus!</p>
         <p>To read more click <a href="a">here</a></p>
-
+        <hr>
 
         </article>
     
