css and index.html styling links

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 
         <p class="welcome">Welcome</p>
 
-        <div id="header">
+        <div id="header"></div>
         <h1>Selectors</h1>
         <h2>In CSS</h2>
         <p>Welcome to the website</p>
     </div>
+
+    <a href="a"> This is a link</a>
+    <a href="a"> This is a link</a>
+    <a href="a"> This is a link</a>
 
         <p>Hello there ninjas</p> 
         <p>Hello there ninjas</p>
