index2.html and sytnaxt.css BOX MODEL

--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
@@ -24,20 +24,11 @@
 <body>
 
     <div id="main-content">
+       
         <h1>Css for beginners</h1>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit mollitia quidem voluptas officiis porro magni
-            cupiditate repellendus voluptatem at quaerat recusandae molestias, quae optio, incidunt error molestiae
-            rerum a voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam numquam praesentium quos
-            aut consectetur qui autem velit maxime dolorem eos tempora ratione ea temporibus optio eligendi, sit fuga
-            eum. Dignissimos.</p>
-
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit mollitia quidem voluptas officiis porro magni
-            cupiditate repellendus voluptatem at quaerat recusandae molestias, quae optio, incidunt error molestiae
-            rerum a voluptate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam numquam praesentium quos
-            aut consectetur qui autem velit maxime dolorem eos tempora ratione ea temporibus optio eligendi, sit fuga
-            eum. Dignissimos.</p>
+        <div class="box">This is the comment</div>
+        <div class="box">This is the comment</div>
 
         </div>
 
