--- a/index2.html
+++ b/index2.html
@@ -24,13 +24,15 @@
 <body>
 
     <div id="main-content">
-       
+
         <h1>Css for beginners</h1>
 
-        <div class="box">This is the comment</div>
+        <div class="box"> This is the comment This is the comment This is the comment This is the comment This is the
+            comment his is the comment his is the comment  This is the comment This is the comment This is the comment his is the comment
+        </div>
         <div class="box">This is the comment</div>
 
-        </div>
+    </div>
 
 </body>
 
