index2.html and syntax.css Padding and Margin LongHand

--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
         <div class="box"> This is the comment This is the comment This is the comment This is the comment This is the
             comment his is the comment his is the comment  This is the comment This is the comment This is the comment his is the comment
         </div>
-        <div class="box">This is the comment</div>
+        <div class="box small">This is the comment</div>
 
     </div>
 
