index2.html and syntax.css border

--- a/index2.html
+++ b/index2.html
@@ -27,10 +27,15 @@
 
         <h1>Css for beginners</h1>
 
-        <div class="box"> This is the comment This is the comment This is the comment This is the comment This is the
-            comment his is the comment his is the comment  This is the comment This is the comment This is the comment his is the comment
-        </div>
-        <div class="box small">This is the comment</div>
+        <div class="box dashed">dashed</div>
+        <div class="box doted">doted</div>
+        <div class="box double">double</div>
+        <div class="box groove">groove</div>
+        <div class="box inset">inset</div>
+        <div class="box outset">outset</div>
+        <div class="box ridge">ridge</div>
+        <div class="box solid">solid</div>
+        
 
     </div>
 
