index2.html and syntax.css block level elements

--- a/index2.html
+++ b/index2.html
@@ -26,16 +26,51 @@
     <div id="main-content">
 
         <h1>Css for beginners</h1>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <a href="a">link</a>
+        <h2>Block Level Elements</h2>
+        <div class="block">Block level element</div>
+        <div class="block">Block level element</div>
+        <h2>Inline Elements</h2>
+        <span class="inline">inline element</span>
+        <span class="inline">inline element</span>
+        <span class="inline">inline element</span>
+        <span class="inline">inline element</span>
+        <span class="inline">inline element</span>
+        <span class="inline">inline element</span>
+        <span class="inline">inline element</span>
+        <span class="inline">inline element</span>
+        <span class="inline">inline element</span>
+        <span class="inline">inline element</span>
+        <span class="inline">inline element</span>
 
-        <div class="box dashed">dashed</div>
-        <div class="box doted">doted</div>
-        <div class="box double">double</div>
-        <div class="box groove">groove</div>
-        <div class="box inset">inset</div>
-        <div class="box outset">outset</div>
-        <div class="box ridge">ridge</div>
-        <div class="box solid">solid</div>
-        
+
+
 
     </div>
 
