index2.html and syntax.css width and height

--- a/index2.html
+++ b/index2.html
@@ -26,49 +26,11 @@
     <div id="main-content">
 
         <h1>Css for beginners</h1>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <a href="a">link</a>
-        <h2>Block Level Elements</h2>
-        <div class="block">Block level element</div>
-        <div class="block">Block level element</div>
-        <h2>Inline Elements</h2>
-        <span class="inline">inline element</span>
-        <span class="inline">inline element</span>
-        <span class="inline">inline element</span>
-        <span class="inline">inline element</span>
-        <span class="inline">inline element</span>
-        <span class="inline">inline element</span>
-        <span class="inline">inline element</span>
-        <span class="inline">inline element</span>
-        <span class="inline">inline element</span>
-        <span class="inline">inline element</span>
-        <span class="inline">inline element</span>
-
+        
+        <div class="static-width">Static ixel Width</div>
+        <div class="percentage-width">Percentage width</div>
+        <div class="inline-block">inline-block</div>
+        <div class="inline-block">inline block</div>
 
 
 
