index2.html and syntax.css rounded corners

--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
         <div class="percentage-width">Percentage width</div>
         <div class="inline-block">inline-block</div>
         <div class="inline-block">inline block</div>
-
+        <div class="inline-block">inline block</div>
 
 
     </div>
