--- a/index2.html
+++ b/index2.html
@@ -25,15 +25,10 @@
 
     <div id="main-content">
 
-        <h1>Css for beginners</h1>
+        <h1>CSS for beginners</h1>
         
-        <div class="static-width">Static ixel Width</div>
-        <div class="percentage-width">Percentage width</div>
-        <div class="inline-block">inline-block</div>
-        <div class="inline-block">inline block</div>
-        <div class="inline-block">inline block</div>
-
-
+        <div class="static-width"></div>
+        
     </div>
 
 </body>
