--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
 
         <h1>CSS for beginners</h1>
         
-        <div class="static-width"></div>
+        <div id="banner"></div>
         
     </div>
 
