--- a/index2.html
+++ b/index2.html
@@ -25,9 +25,9 @@
 
     <div id="main-content">
 
-        <h1>CSS for beginners</h1>
-        
-        <div id="banner"></div>
+        <div id="circle">Hello</div>
+        <div id="circle-2">Hello</div>
+        <div id="circle-3">Hello</div>
         
     </div>
 
